--- a/MedsTracker2/app/src/main/res/layout/activity_main.xml
+++ b/MedsTracker2/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
-        android:background="#FFFFFF"
+        android:background="@color/white"
         app:itemIconTint="@color/backgroundColor"
         app:itemTextColor="@color/backgroundColor"
         android:layout_width="wrap_content"
