--- a/MedsTracker2/app/src/main/res/layout/content_main.xml
+++ b/MedsTracker2/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FF5722"
+    android:background="@color/navbar_background_color"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.cdu.medstracker.MainActivity"
     tools:showIn="@layout/app_bar_main">
