--- a/MedsTracker2/app/src/main/res/layout/fragment_about.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_about.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:text="@string/ABOUT"
         android:textSize="40dp"
         android:textAlignment="center"/>
@@ -27,7 +27,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:text="@string/about_text2"
         android:textSize="20dp"
         android:padding="20dp"/>
