--- a/MedsTracker2/app/src/main/res/layout/fragment_create_phone.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_create_phone.xml
@@ -6,7 +6,7 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
+        android:background="@color/white"
         tools:context="com.example.cdu.medstracker.CreatePhoneFragment"
         android:columnCount="2"
         android:paddingTop="@dimen/activity_vertical_margin"
@@ -29,7 +29,7 @@
             android:inputType="textCapCharacters"
             android:ems="10"
             android:hint="eg. Dr. Andrew Smith"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:id="@+id/phoneNameEditText"
             android:layout_column="1">
 
@@ -52,7 +52,7 @@
             android:gravity="top|left"
             android:hint="519 448 1111"
             android:ems="10"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:id="@+id/phoneNumberEditText"
             android:layout_column="1" />
 
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:ems="10"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:hint="eg. Family doctor"
             android:id="@+id/phoneNoteEditText"
             android:layout_column="1" />
