--- a/MedsTracker2/app/src/main/res/layout/fragment_edit_phone.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_edit_phone.xml
@@ -7,7 +7,7 @@ android:layout_height="match_parent">
 <GridLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/white"
     tools:context="com.example.cdu.medstracker.EditPhoneFragment"
     android:columnCount="2"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -29,7 +29,7 @@ android:layout_height="match_parent">
         android:layout_height="wrap_content"
         android:inputType="textCapCharacters|textImeMultiLine"
         android:ems="10"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:id="@+id/editPhoneName"
         android:layout_column="1">
 
@@ -51,7 +51,7 @@ android:layout_height="match_parent">
         android:inputType="phone"
         android:gravity="top|left"
         android:ems="10"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:id="@+id/editPhoneNumber"
         android:layout_column="1" />
 
@@ -68,7 +68,7 @@ android:layout_height="match_parent">
         android:layout_height="wrap_content"
         android:inputType="textImeMultiLine"
         android:ems="10"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:id="@+id/editPhoneNote"
         android:layout_column="1" />
 
