--- a/MedsTracker2/app/src/main/res/layout/fragment_view_pager_content.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_view_pager_content.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/white"
             android:textSize="30sp"
             android:textStyle="bold"
             android:layout_marginTop="8dp"
@@ -34,7 +34,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:id="@+id/textViewPagerBody"/>
 
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/viewPagerTextView"
                 android:layout_gravity="center_horizontal"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
