--- a/MedsTracker2/app/src/main/res/layout/phone_item_view.xml
+++ b/MedsTracker2/app/src/main/res/layout/phone_item_view.xml
@@ -32,7 +32,7 @@
                 <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
-                   android:textColor="#000000"
+                   android:textColor="@color/black"
                    android:id="@+id/phoneNameTextView"
                    android:padding="4dp"
                    android:textSize="@dimen/cardview_header_text_size"
@@ -57,7 +57,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="@dimen/cardview_text_size"
                 android:id="@+id/phoneNumberTextView"
                 android:textStyle="bold|normal"/>
@@ -76,7 +76,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="@dimen/cardview_text_size"
                 android:id="@+id/phoneNoteTextView"
                 android:textStyle="bold|normal"/>
