--- a/MedsTracker2/app/src/main/res/values/colors.xml
+++ b/MedsTracker2/app/src/main/res/values/colors.xml
@@ -25,7 +25,8 @@
     <color name="roseCardView">#FF645A</color>
 
     <color name="brown">#96041E</color>
-    <color name="white">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 
     <color name="fab_color">#FFEA00</color>
     <color name="fab_ripple_color">#00E676</color>
