--- a/MedsTracker2/app/src/main/res/layout/app_bar_main.xml
+++ b/MedsTracker2/app/src/main/res/layout/app_bar_main.xml
@@ -17,32 +17,33 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@drawable/side_nav_bar"
-            app:titleTextColor="#00FFFFFF"
+            app:titleTextColor="@color/textColor"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
 
+            <!--Layout of the application toolbar-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <Space
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_width="@dimen/zero_dp"
+                    android:layout_height="@dimen/zero_dp"
                     android:layout_weight="2"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/app_name"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/textColor"
                     android:textStyle="bold"
                     android:textAlignment="center"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/toolbar_textSize"
                     android:id="@+id/toolbar_title" />
 
                 <Space
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_width="@dimen/zero_dp"
+                    android:layout_height="@dimen/zero_dp"
                     android:layout_weight="4"/>
 
 
