--- a/MedsTracker2/app/src/main/res/layout/fragment_about.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_about.xml
@@ -13,23 +13,17 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="@color/textColor"
         android:text="@string/ABOUT"
-        android:textSize="40dp"
+        android:textSize="@dimen/about_header_textSize"
         android:textAlignment="center"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/textColor"
         android:text="@string/about_text"
-        android:textSize="20dp"
-        android:padding="20dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/white"
-        android:text="@string/about_text2"
-        android:textSize="20dp"
-        android:padding="20dp"/>
+        android:textSize="@dimen/about_body_textSize"
+        android:padding="@dimen/activity_horizontal_margin"/>
+
 </LinearLayout>
 </ScrollView>
