--- a/MedsTracker2/app/src/main/res/layout/fragment_create_phone.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_create_phone.xml
@@ -16,42 +16,42 @@
 
 
         <TextView
-            android:text="Name:"
+            android:text="@string/phone_name_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="22sp" />
+            android:textSize="@dimen/form_field_label" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textCapCharacters"
-            android:ems="10"
-            android:hint="eg. Dr. Andrew Smith"
+            android:ems="@integer/edit_text_ems_text_size"
+            android:hint="@string/phone_name_hint"
             android:textColor="@color/black"
             android:id="@+id/phoneNameEditText"
             android:layout_column="1">
 
+            <!--Requests focus for this EditText, when the parent view is first displayed-->
             <requestFocus />
 
         </EditText>
 
         <TextView
-            android:text="Phone:"
+            android:text="@string/phone_number_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:layout_column="0"
-            android:textSize="22sp" />
+            android:textSize="@dimen/form_field_label" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="phone"
-            android:gravity="top|left"
-            android:hint="519 448 1111"
-            android:ems="10"
+            android:hint="@string/phone_number_hint"
+            android:ems="@integer/edit_text_ems_text_size"
             android:textColor="@color/black"
             android:id="@+id/phoneNumberEditText"
             android:layout_column="1" />
@@ -59,27 +59,27 @@
 
 
         <TextView
-            android:text="Note:"
+            android:text="@string/phone_note_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:layout_column="0"
-            android:textSize="22sp" />
+            android:textSize="@dimen/form_field_label" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
-            android:ems="10"
+            android:ems="@integer/edit_text_ems_text_size"
             android:textColor="@color/black"
-            android:hint="eg. Family doctor"
+            android:hint="@string/phone_note_hint"
             android:id="@+id/phoneNoteEditText"
             android:layout_column="1" />
 
 
 
         <Button
-            android:text="CREATE CARD"
+            android:text="@string/create_card_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/phoneCreateButton"
