--- a/MedsTracker2/app/src/main/res/layout/fragment_view_pager_content.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_view_pager_content.xml
@@ -15,30 +15,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="30sp"
+            android:textSize="@dimen/view_pager_header"
             android:textStyle="bold"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:textAlignment="center"
             android:id="@+id/textViewPagerHeader"/>
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="130dp"
+            android:layout_height="@dimen/view_pager_image_height"
             android:layout_gravity="center_horizontal"
-            android:paddingLeft="40dp"
-            android:paddingRight="40dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+            android:paddingLeft="@dimen/view_pager_image_view_padding"
+            android:paddingRight="@dimen/view_pager_image_view_padding"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
             android:id="@+id/imageViewPager"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/view_pager_body_text_size"
             android:id="@+id/textViewPagerBody"/>
-
-
 
 
             <TextView
@@ -47,7 +45,7 @@
                 android:id="@+id/viewPagerTextView"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="@dimen/view_pager_body_text_size"
                 android:textStyle="bold" />
 
 
