--- a/MedsTracker2/app/src/main/res/layout/nav_header_main.xml
+++ b/MedsTracker2/app/src/main/res/layout/nav_header_main.xml
@@ -2,30 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="@dimen/nav_header_layout_height"
     android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
+    android:padding="@dimen/activity_horizontal_margin"
     android:orientation="vertical"
-    android:paddingTop="5dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:layout_marginTop="20dp"
-        android:paddingTop="10dp"
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
-        android:layout_height="150dp"
-        android:src="@drawable/medtrackerlogo"
- />
+        android:layout_height="@dimen/nav_header_image_height"
+        android:src="@drawable/medtrackerlogo" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="10dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textAlignment="center"-->
+        <!--android:textSize="24sp"-->
+        <!--android:textStyle="bold"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->
 
 
 
