--- a/MedsTracker2/app/src/main/res/layout/phone_item_view.xml
+++ b/MedsTracker2/app/src/main/res/layout/phone_item_view.xml
@@ -28,6 +28,7 @@
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
+                   android:textSize="@dimen/cardview_text_size"
                    android:id="@+id/phoneNameTextView1"
                    android:text="@string/phone_name_label"
                    android:textStyle="normal"/>
@@ -51,9 +52,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="@dimen/cardview_text_size"
                 android:id="@+id/phoneTextView2"
                 android:text="@string/phone_number_label"
                 android:textStyle="normal"/>
@@ -75,6 +78,7 @@
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
+                 android:textSize="@dimen/cardview_text_size"
                  android:id="@+id/phoneTextView3"
                  android:text="@string/phone_note_label"
                  android:textStyle="normal"/>
@@ -123,8 +127,8 @@
                 android:id="@+id/editPhoneIcon"
                 android:gravity="center">
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/card_icon_size"
+                    android:layout_height="@dimen/card_icon_size"
                     android:id="@+id/phoneEditImageView"
                     cardView:srcCompat="@drawable/ic_mode_edit_black_24dp" />
 
@@ -143,8 +147,8 @@
                 android:id="@+id/phoneIcon"
                 android:gravity="center">
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/card_icon_size"
+                    android:layout_height="@dimen/card_icon_size"
                     android:id="@+id/phoneTalkImageView"
                     cardView:srcCompat="@drawable/ic_phone_in_talk_black_24dp" />
             </LinearLayout>
