--- a/MedsTracker2/app/src/main/res/layout/preference_header_layout.xml
+++ b/MedsTracker2/app/src/main/res/layout/preference_header_layout.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/settings_button_height"
         android:background="@drawable/rectangle"
         android:orientation="horizontal">
 
