--- a/MedsTracker2/app/src/main/res/layout/preference_pic_layout_faqs.xml
+++ b/MedsTracker2/app/src/main/res/layout/preference_pic_layout_faqs.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
     android:layout_height="@dimen/sources_layout_size">
 
     <ImageView
         android:layout_width="@dimen/sources_layout_size"
         android:layout_height="wrap_content"
         android:src="@drawable/faqs"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         />
 
@@ -20,6 +22,7 @@
         android:textSize="@dimen/cardview_text_size"
         android:textStyle="bold"
         android:layout_marginLeft="@dimen/sources_margin_left"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:ellipsize="end"
         android:text="https://pixabay.com/en/tablets-pills-vitamins-antibiotic-1796506/"/>
 
