--- a/MedsTracker2/app/src/main/res/layout/preference_pic_layout_medical_symbol.xml
+++ b/MedsTracker2/app/src/main/res/layout/preference_pic_layout_medical_symbol.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
     android:layout_height="@dimen/sources_layout_size">
 
     <ImageView
@@ -9,6 +10,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/medical_symbol"
         android:background="@color/textColor"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         />
 
@@ -21,6 +23,7 @@
         android:textSize="@dimen/cardview_text_size"
         android:textStyle="bold"
         android:layout_marginLeft="@dimen/sources_margin_left"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:ellipsize="end"
         android:text="@string/sources_medical_symbol_url"/>
 
