--- a/MedsTracker2/app/src/main/res/layout/preference_pic_layout_tablets.xml
+++ b/MedsTracker2/app/src/main/res/layout/preference_pic_layout_tablets.xml
@@ -8,6 +8,7 @@
         android:layout_width="@dimen/sources_layout_size"
         android:layout_height="wrap_content"
         android:src="@drawable/tablets"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         />
 
@@ -20,6 +21,7 @@
         android:textSize="@dimen/cardview_text_size"
         android:textStyle="bold"
         android:layout_marginLeft="@dimen/sources_margin_left"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:ellipsize="end"
         android:text="@string/sources_tablets_url"/>
 
