--- a/MedsTracker2/app/src/main/res/layout/item_view.xml
+++ b/MedsTracker2/app/src/main/res/layout/item_view.xml
@@ -217,7 +217,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/imagesLinearLayout" />
+            android:id="@+id/imagesLinearLayout" > </LinearLayout>
 
 
             <LinearLayout
